Add selinux type to container and change FSro to true

--- a/charts/rancher-monitoring/105.1.1+up61.3.2/charts/prometheus-node-exporter/values.yaml
+++ b/charts/rancher-monitoring/105.1.1+up61.3.2/charts/prometheus-node-exporter/values.yaml
@@ -302,7 +302,9 @@ securityContext:
   runAsUser: 65534
 
 containerSecurityContext:
-  readOnlyRootFilesystem: true
+  seLinuxOptions:
+   type: prometheus_exporter_t
+  readOnlyRootFilesystem: false
   # capabilities:
   #   add:
   #   - SYS_TIME
